Header nav centered, headshot loading no longer causes layout shift.

--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,12 @@
 }
 #main-nav {
   display: flex;
+  flex-grow: 1;
   gap: 1rem;
+  max-width: 768px;
+  margin: auto;
 }
-#main-nav a {
+#main-nav a:not(.logo-home-link) {
   font-size: 1.25rem;
   background: yellow;
   outline: 1px solid var(--text-color);
@@ -134,11 +137,13 @@ h1, h2 {
   margin-top: 1rem;
 }
 .contact-info .headshot {
-  display: block;
+  display: flex;
+  flex-basis: 400px;
   border-radius: 100%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 1rem;
+  aspect-ratio: 1/1;
 }
 
 .sites-list {
